Made another small change to test fixing display issues on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ ul > li {
 @media only screen and (max-width: 768px) {
 	.container {
 		display: flex;
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: center;
 		text-align: center;
 		overflow: hidden;
